# lstf

./: .clang-format  .gitignore  fibonacci-async-memo.lstf  fibonacci-async.dot  fibonacci-async.lstf  fibonacci-async.lstfc  meson.build  meson_options.txt  vls.dot  vls.lstf  vls.lstfa  vls.lstfc
doc/: grammar.txt  isa.md
extra/: grammar.js
include/: version.h.in
include/c11/align/: stdalign.h
include/c11/atomic/: stdatomic.h  stdatomic_win32.h
include/c11/threads/: threads.h  threads_win32.h
src/: lstf-common.h  lstf-file.h  lstf.c  main.c  meson.build  util.c  util.h
src/bytecode/: lstf-bc-function.c  lstf-bc-function.h  lstf-bc-instruction.h  lstf-bc-program.c  lstf-bc-program.h  lstf-bc-serialize.c  lstf-bc-serialize.h
src/compiler/: lstf-anytype.c  lstf-anytype.h  lstf-array.c  lstf-array.h  lstf-arraytype.c  lstf-arraytype.h  lstf-assertstatement.c  lstf-assertstatement.h  lstf-assignment.c  lstf-assignment.h  lstf-binaryexpression.c  lstf-binaryexpression.h  lstf-block.c  lstf-block.h  lstf-booleantype.c  lstf-booleantype.h  lstf-codegenerator.c  lstf-codegenerator.h  lstf-codenode.c  lstf-codenode.h  lstf-codevisitor.c  lstf-codevisitor.h  lstf-conditionalexpression.c  lstf-conditionalexpression.h  lstf-constant.c  lstf-constant.h  lstf-datatype.c  lstf-datatype.h  lstf-declaration.c  lstf-declaration.h  lstf-doubletype.c  lstf-doubletype.h  lstf-elementaccess.c  lstf-elementaccess.h  lstf-ellipsis.c  lstf-ellipsis.h  lstf-enum.c  lstf-enum.h  lstf-enumtype.c  lstf-enumtype.h  (+91 more)
src/data-structures/: array.h  closure.c  closure.h  collection.h  hashmap.h  intset.h  iterable.h  iterator.c  iterator.h  list.h  ptr-hashmap.c  ptr-hashmap.h  ptr-hashset.c  ptr-hashset.h  ptr-list.c  ptr-list.h  string-builder.c  string-builder.h
src/io/: event.c  event.h  inputstream.c  inputstream.h  io-common.c  io-common.h  io-process.c  io-process.h  outputstream.c  outputstream.h
src/json/: json-parser.c  json-parser.h  json-scanner.c  json-scanner.h  json-serializable.c  json-serializable.h  json.c  json.h
src/jsonrpc/: jsonrpc-server.c  jsonrpc-server.h
src/lsp/: lsp-client.c  lsp-client.h  lsp-diagnostic.c  lsp-diagnostic.h  lsp-location.c  lsp-location.h  lsp-position.c  lsp-position.h  lsp-range.c  lsp-range.h  lsp-server.h  lsp-textdocument.c  lsp-textdocument.h  lsp-window.c  lsp-window.h
src/vm/: lstf-virtualmachine.c  lstf-virtualmachine.h  lstf-vm-coroutine.c  lstf-vm-coroutine.h  lstf-vm-debug.h  lstf-vm-loader.c  lstf-vm-loader.h  lstf-vm-lsp.c  lstf-vm-lsp.h  lstf-vm-opcodes.h  lstf-vm-program.c  lstf-vm-program.h  lstf-vm-stack.c  lstf-vm-stack.h  lstf-vm-status.h  lstf-vm-value.c  lstf-vm-value.h
tests/: meson.build  prepend-content-length.c
tests/bytecode/: lstf-bc-serialize-test.c  meson.build
tests/compiler/: assignments.lstf  diagnostics.lstf  functions.lstf  hover.lstf  interfaces-and-classes.lstf  meson.build  structured-values.lstfi  variable-redefinition.lstf
tests/compiler/codegen/: array.lstf  assert.lstf  async-fibonacci.lstf  async-lambda.lstf  async-no-await.lstf  closure-modified.lstf  closure.lstf  factorial.lstf  if-statements.lstf  lambda.lstf  meson.build  object-nonconst.lstf  object.lstf  verbatim-string.lstf
tests/compiler/parser/: array.lstf  class-decl.lstf  if-statements.lstf  lstf-parser-test.c  meson.build  object.lstf  pattern-test.lstf  unterminated-statements.lstf
tests/compiler/scanner/: double.lstf  example.lstf  lstf-scanner-test.c  malformed-comments.lstf  meson.build  unterminated-string.lstf
tests/compiler/semantic/: assignments-typed.lstf  closure-access.lstf  function-call.lstf  function-types.lstf  insufficient-arguments.lstf  invalid-access.lstf  invalid-arithmetic-operands.lstf  invalid-assignments.lstf  meson.build  not-callable.lstf  object-element-access.lstf  object-element-write.lstf  object-member-access.lstf  object-member-write.lstf  passed-lambda-with-expression-body.lstf  required-await-in-async.lstf  string-element-access.lstf  too-many-arguments.lstf  type-as-value.lstf  variable-with-void-type.lstf
tests/data-structures/: array.c  intset.c  meson.build  ptr-hashmap-large.c  ptr-hashmap.c  ptr-list.c
tests/io/: event-pipe.c  io-file-pipe.c  io-memory-pipe.c  memory-pipe.c  meson.build  subprocess.c
tests/json/: cycle-serialize-pretty.txt  json-cycle-serialize-test.c  json-parser-double.c  json-parser-memory.c  json-parser-object.c  json-pattern-array.c  json-pattern-object.c  json-pattern-optional-member.c  json-serialize-test.c  meson.build  parse-double.json  parse-object.json  serialize-pretty.json  serialize.json
tests/jsonrpc/: batched.json  call.json  jsonrpc-batched.c  jsonrpc-call.c  jsonrpc-notification.c  meson.build  notification.json
tests/lsp/: lsp-server.c  meson.build  stream.json
tests/vm/: hello-world.lstfa  hello-world.lstfc  indirect-call.lstfa  loop.lstfa  meson.build  object.lstfa  vm-factorial-test.c
tools/: prettyprinters.py
