test('codegen-array', lstf, suite: 'compiler',
  args: ['-no-lsp', meson.source_root() + '/tests/compiler/codegen/array.lstf'])

test('codegen-closure', lstf, suite: 'compiler',
  args: ['-no-lsp', meson.source_root() + '/tests/compiler/codegen/closure.lstf'])

test('codegen-factorial', lstf, suite: 'compiler',
  args: ['-no-lsp', meson.source_root() + '/tests/compiler/codegen/factorial.lstf'])

test('codegen-if-statements', lstf, suite: 'compiler',
  args: ['-no-lsp', meson.source_root() + '/tests/compiler/codegen/if-statements.lstf'])

test('codegen-object', lstf, suite: 'compiler',
  args: ['-no-lsp', meson.source_root() + '/tests/compiler/codegen/object.lstf'])
