test('semantic-assignments-typed', lstf, suite: 'compiler',
  args: [meson.source_root() + '/tests/compiler/semantic/assignments-typed.lstf'])

test('semantic-function-call', lstf, suite: 'compiler',
  args: [meson.source_root() + '/tests/compiler/semantic/function-call.lstf'])

test('semantic-function-types', lstf, suite: 'compiler',
  args: [meson.source_root() + '/tests/compiler/semantic/function-types.lstf'])

test('semantic-insufficient-arguments', lstf, suite: 'compiler', should_fail: true,
  args: [meson.source_root() + '/tests/compiler/semantic/insufficient-arguments.lstf'])

test('semantic-invalid-access', lstf, suite: 'compiler', should_fail: true,
  args: [meson.source_root() + '/tests/compiler/semantic/invalid-access.lstf'])

test('semantic-invalid-assignments', lstf, suite: 'compiler', should_fail: true,
  args: [meson.source_root() + '/tests/compiler/semantic/invalid-assignments.lstf'])

test('semantic-not-callable', lstf, suite: 'compiler', should_fail: true,
  args: [meson.source_root() + '/tests/compiler/semantic/not-callable.lstf'])


test('semantic-too-many-arguments', lstf, suite: 'compiler', should_fail: true,
  args: [meson.source_root() + '/tests/compiler/semantic/too-many-arguments.lstf'])
